Update gitignore, add env template, and enhance voice module with Twilio and outbound features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,19 +11,23 @@ SANITY_TOKEN=your_sanity_token
 SANITY_API_URL=http://localhost:8000/api/sanity
 
 # Foxit
-FOXIT_API_KEY=your_foxit_api_key
-FOXIT_API_SECRET=your_foxit_api_secret
+FOXIT_BASE_URL=https://na1.fusion.foxit.com
+FOXIT_PDF_SERVICES_CLIENT_ID=your_foxit_pdf_services_client_id
+FOXIT_PDF_SERVICES_API_SECRET=your_foxit_pdf_services_api_secret
+FOXIT_DOCUMENT_GENERATION_CLIENT_ID=your_foxit_document_generation_client_id
+FOXIT_DOCUMENT_GENERATION_API_SECRET=your_foxit_document_generation_api_secret
 
 # Twilio (for phone calling)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1xxxyyyzzzz
 
-# Email Alerts
-SMTP_HOST=smtp.gmail.com
+# Email Alerts (Brevo SMTP Relay — claracare.me)
+SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
+SMTP_USER=your-brevo-smtp-login
+SMTP_PASSWORD=your-brevo-smtp-key
+FROM_EMAIL=alerts@claracare.me
 
 # Your server's public URL (update when using ngrok or production)
 SERVER_PUBLIC_URL=http://localhost:8000
