feat(backend): update storage, routes, cognitive utils, and dependencies
- Update cognitive utils calculation functions
- Improve YouCom nostalgia client error handling
- Clean up route registrations and storage interfaces
- Update memory storage implementation
- Enhance voice function handlers
- Update env example and requirements.txt
- Update backend README

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,33 +1,34 @@
-# Deepgram
+# Deepgram (Voice Agent API)
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
 
-# You.com
+# You.com (Nostalgia Search)
 YOUCOM_API_KEY=your_youcom_api_key_here
 
-# Sanity
+# Sanity (Patient Data Store)
 SANITY_PROJECT_ID=your_sanity_project_id
 SANITY_DATASET=production
 SANITY_TOKEN=your_sanity_token
-SANITY_API_URL=http://localhost:8000/api/sanity
+SANITY_API_URL=https://api.claracare.me/api/sanity
 
-# Foxit
+# Foxit (Document Generation API)
 FOXIT_BASE_URL=https://na1.fusion.foxit.com
-FOXIT_PDF_SERVICES_CLIENT_ID=your_foxit_pdf_services_client_id
-FOXIT_PDF_SERVICES_API_SECRET=your_foxit_pdf_services_api_secret
-FOXIT_DOCUMENT_GENERATION_CLIENT_ID=your_foxit_document_generation_client_id
-FOXIT_DOCUMENT_GENERATION_API_SECRET=your_foxit_document_generation_api_secret
+FOXIT_DOCUMENT_GENERATION_CLIENT_ID=your_foxit_doc_gen_client_id
+FOXIT_DOCUMENT_GENERATION_API_SECRET=your_foxit_doc_gen_api_secret
 
-# Twilio (for phone calling)
+# Twilio (Outbound Phone Calls)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=+1xxxyyyzzzz
+TWILIO_PHONE_NUMBER=+1your_twilio_number
 
-# Email Alerts (Brevo SMTP Relay — claracare.me)
+# Email Alerts (SMTP Relay)
 SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-SMTP_USER=your-brevo-smtp-login
-SMTP_PASSWORD=your-brevo-smtp-key
+SMTP_USER=your_smtp_user
+SMTP_PASSWORD=your_smtp_password
 FROM_EMAIL=alerts@claracare.me
 
-# Your server's public URL (update when using ngrok or production)
-SERVER_PUBLIC_URL=http://localhost:8000
+# Dashboard URL (used in email notifications)
+DASHBOARD_URL=https://claracare.me/dashboard
+
+# Your server's public URL (Cloudflare-proxied domain)
+SERVER_PUBLIC_URL=https://api.claracare.me
