feat(dashboard): connect to live backend and add editable settings
- Switch API client from mock mode to env-controlled live backend
- Default API URL to https://api.claracare.me
- Update next.config.ts proxy rewrites for production backend
- Rewrite Settings page with editable phone number (E.164) and call schedule
- Add Save button with loading/success states for phone and schedule
- Keep profile, medications, preferences as read-only sections
- Update .env.local.example with production config

--- a/dashboard/.env.local.example
+++ b/dashboard/.env.local.example
@@ -1,11 +1,13 @@
 # Copy to .env.local and fill in values.
-# Leave NEXT_PUBLIC_API_URL empty to use Next.js proxy (rewrites /api/* to BACKEND_URL).
 
-# API base URL for client-side fetch. Empty = same origin, use proxy (see next.config.ts).
-NEXT_PUBLIC_API_URL=
+# API base URL — defaults to production backend
+NEXT_PUBLIC_API_URL=https://api.claracare.me
 
-# Default patient ID for the dashboard.
+# Set to 'true' to use mock data instead of live backend
+NEXT_PUBLIC_USE_MOCK=false
+
+# Default patient ID for the dashboard
 NEXT_PUBLIC_PATIENT_ID=patient-dorothy-001
 
-# Backend URL for the /backend-api proxy (server-side). Default: 5001 (5000 is often used by macOS AirPlay).
-BACKEND_URL=http://localhost:5001
+# Backend URL for server-side proxy (used in next.config.ts rewrites)
+BACKEND_URL=https://api.claracare.me
