--- a/dashboard/public/manifest.json
+++ b/dashboard/public/manifest.json
@@ -1,12 +1,26 @@
 {
   "name": "ClaraCare Family Dashboard",
   "short_name": "ClaraCare",
+  "description": "AI Elder Care Companion — Monitor cognitive health, manage daily check-ins, and stay connected with your loved ones.",
   "start_url": "/",
+  "scope": "/",
+  "id": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#f9fafb",
   "theme_color": "#2563eb",
   "icons": [
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ]
 }
