feat: Foxit PDF Services, download button, NLP enhancements, CPU-only Docker
PDF & Reports:
- Add FoxitPDFServicesClient for HTML→PDF conversion (upload/convert/poll/download)
- Build ClaraCare-branded HTML report template in generator.py
- Wire PDF Services into app startup (main.py)
- Add Download Report button to dashboard wellness section

NLP & Cognitive:
- Add memory inconsistency detection (YES→UNSURE→NO pattern)
- Auto-generate coherence_drop alerts when topic_coherence < 0.40
- Add Deepgram context prefix for better patient-aware summaries
- Post-process Deepgram summaries (replace 'customer' with 'patient')
- Add CUDA auto-detection for SentenceTransformer

Voice:
- Improve persona: handle unclear input, pushback, and direct requests
- Pass post-call analysis data through to save_conversation

Infrastructure:
- Switch to CPU-only PyTorch in Dockerfile (saves ~2.5GB image size)
- Fix .env: replace stale Brevo SMTP with SendGrid credentials
- Update .env.example: add Foxit PDF Services vars, SendGrid defaults
- Fix backend-deployment.yaml: restore resources block structure
- Add email alert types: coherence_drop, distress

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,16 +15,20 @@ FOXIT_BASE_URL=https://na1.fusion.foxit.com
 FOXIT_DOCUMENT_GENERATION_CLIENT_ID=your_foxit_doc_gen_client_id
 FOXIT_DOCUMENT_GENERATION_API_SECRET=your_foxit_doc_gen_api_secret
 
+# Foxit (PDF Services API)
+FOXIT_PDF_SERVICES_CLIENT_ID=your_foxit_pdf_services_client_id
+FOXIT_PDF_SERVICES_CLIENT_SECRET=your_foxit_pdf_services_client_secret
+
 # Twilio (Outbound Phone Calls)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1your_twilio_number
 
-# Email Alerts (SMTP Relay)
-SMTP_HOST=smtp-relay.brevo.com
+# Email Alerts (SendGrid SMTP)
+SMTP_HOST=smtp.sendgrid.net
 SMTP_PORT=587
-SMTP_USER=your_smtp_user
-SMTP_PASSWORD=your_smtp_password
+SMTP_USER=apikey
+SMTP_PASSWORD=your_sendgrid_api_key
 FROM_EMAIL=alerts@claracare.me
 
 # Dashboard URL (used in email notifications)
