--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,7 +11,10 @@ RUN apt-get update && apt-get install -y \
 # Copy requirements first (for caching)
 COPY requirements.txt .
 
-# Install Python dependencies
+# Install CPU-only PyTorch first (avoids ~2.5GB of CUDA libraries)
+RUN pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu
+
+# Install remaining Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Download spaCy model (using direct pip install instead of spacy download)
