--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,9 @@ scikit-learn==1.4.0
 aiosmtplib==3.0.1
 jinja2==3.1.3
 
+# Gemini LLM (for rich call summaries)
+google-generativeai>=0.8.0
+
 # Testing
 pytest==8.0.0
 pytest-asyncio==0.23.5
