feat(backend): implement comprehensive project review fixes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,13 @@
-FROM python:3.11-slim
+# ─── Build stage: install dependencies ───────────────────────────────────────
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first (for caching)
 COPY requirements.txt .
 
 # Install CPU-only PyTorch first (avoids ~2.5GB of CUDA libraries)
@@ -17,21 +16,34 @@ RUN pip install --no-cache-dir torch --index-url https://download.pytorch.org/wh
 # Install remaining Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Download spaCy model (using direct pip install instead of spacy download)
+# Download spaCy model
 RUN pip install --no-cache-dir https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
+# ─── Production stage: lean runtime ─────────────────────────────────────────
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Copy only the installed packages from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Install only runtime system deps (curl for health check)
+RUN apt-get update && apt-get install -y --no-install-recommends curl \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy application code
 COPY . .
 
-# Expose port
 EXPOSE 8000
 
-# Set Python path
 ENV PYTHONPATH=/app
 
-# Health check
+# Run as non-root user
+RUN adduser --disabled-password --gecos "" appuser
+USER appuser
+
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD curl -f http://localhost:8000/health || exit 1
 
-# Run application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
